samples/_failures_safe/1761130074_01eb53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_488ef1e7.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_488ef1e7.c:187:17: error: expected declaration or statement at end of input
  187 |                 graph->edges[i]->target->visited = 1;
      |                 ^~~~~
./samples/SAFE/__tmp_488ef1e7.c:187:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_488ef1e7.c:187:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_488ef1e7.c:187:17: error: expected declaration or statement at end of input
